authorization-policy/namespace-foo.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: foo
  labels:
    istio.io/rev: asm-195-2
