authorization-policy/ap-require-valid-token-app-istioauth-all-allow-ingress.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: "httpbin"
  namespace: foo
spec:
  selector:
    matchLabels:
      app: httpbin
  action: ALLOW
  rules:
  - from:
    - source:
        principals: ["kenthua-test-standalone.svc.id.goog/ns/istio-system/sa/istio-ingressgateway-service-account"]
